--- a/defi_pokemon.tex
+++ b/defi_pokemon.tex
@@ -6,7 +6,7 @@
 \usepackage{xcolor}
 
 \title{Decentralized Pokémon Trading Platform}
-\author{Michele Serra (17-265-323), Elric Pascali (**Matrikel-Nr**)}
+\author{Michele Serra (17-265-323), Elric Pascali (21-917-984)}
 \date{31st of March 2025}
 
 \lstset{
